<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="blank"></string>
    <string name="save">Save</string>
    <string name="app_name">Where\'s My Money</string>

    <string name="app_add_iou">New Transaction</string>
    <string name="app_edit_iou">Edit Transaction</string>

    <string name="app_contact_details">Contact Details</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="drawer_open">Open</string>
	<string name="drawer_close">Close</string>
	
	<string name="no_ious">No transactions to display. Change your filters or add a transaction using the menu above.</string>
	<string name="no_contacts">You have not sent any transactions to your contacts. Send some from the \'Loans\' page.</string>
	
	<string name="filter">Sort By:</string>
	<string-array name="filter_options">
        <item>Newest Loans</item>
        <item>Due Soon</item>
        <item>Sort By Title</item>
        <item>Sort By Value</item>
        <item>Archived</item>
    </string-array>
    <string name="show_direction">Show:</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="addnewiou">Add New Transaction</string>
    
	<!-- iou new -->
	<string name="new_iou_title">Title:</string>
	<string name="new_iou_title_hint">ex: Books</string>
	
	<string name="new_iou_type">   Type:</string>
	<string-array name="new_iou_types">
        <item>Money</item>
        <item>Item</item>
    </string-array>
    
	<string name="new_iou_value">   Value:</string>
	<string name="new_iou_default_value">10.00</string>
	<string name="new_iou_value_$">$</string>
	
	<string-array name="new_iou_direction">
        <item>To:</item>
        <item>From:</item>
    </string-array>
	<string-array name="new_iou_subjects">
        <item>Add Person...</item>
        <item>Enter name</item>
        <item>Add from Contacts</item>
    </string-array>
    <string name="new_iou_remove">Remove</string>

	<string-array name="new_iou_pictures">
        <item>Add Picture...</item>
        <item>Take New</item>
        <item>Choose Existing</item>        
    </string-array>
	
	<string name="new_iou_date_loaned">Date Loaned: </string>
	<string name="new_iou_date_due">Set Due Date </string>
	
	<string name="new_iou_notes_hint">Click to add notes...</string>
	
	<string name="new_iou_remind_me">Set Reminder</string>
	
	<string name="new_iou_details">Details</string>
	<string name="new_iou_reminders">Reminders</string>
	<string name="new_iou_notes">Notes</string>
	
	<string name="new_iou_accept">Accept</string>
	<string name="new_iou_cancel">Cancel</string>
	
		<!-- Navigation header text -->
	<string-array name="nav_drawer_headers">
	    <item>Your Money</item>
	    <item>Application</item>
	</string-array>
	
	<!-- Navigation drawer text -->
    <string-array name="nav_drawer_items">
        <item >Loans</item>
        <item >Contacts</item>
        <item >Reminders</item>
        <item >Statistics</item>
        <item >Settings</item>
        <item >About</item>
    </string-array>
    
    <!-- Navigation drawer icons -->
    <string name="action_open_settings">Settings</string>
    <string name="action_new_iou">Create Transaction</string>
    <array name="nav_drawer_icons">
        <item>@drawable/ic_loans</item>
        <item>@drawable/ic_contacts</item>
        <item>@drawable/ic_reminders</item>
        <item>@drawable/ic_statistics</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_about</item>
    </array>
    <string name="desc_list_item_icon">Item Icon</string>
    

    <!-- color wheel picker -->
	<string name="pref_category_visuals">Visuals</string>
    <string name="color_background_title">Button Background Color</string>
    <string name="color_background_summary">Change the color of the button background</string> <!-- black color by default, set by reference -->
    <string name="color_text_title">Button Text Color</string>
    <string name="color_text_summary">Change the color of the button text</string> <!-- not persistent color\nalpha slider added via code --> 
    
    
    <string name="color3_title">Color 3</string>
    <string name="color3_summary">picker with alpha slider</string> 
    <string name="color4_title">Color 4</string>
    <string name="color4_summary">color set with HEX code in xml</string>   
    
    
	<!-- Settings menu -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    
    <!-- About page -->
    <string name="github_link">https://github.com/ranokmai/wmm</string>

</resources>
